--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
       "optimize": true,
       "isLibrary": true
     }
+  },
+  "exports": {
+    "import": "./dist/module.js",
+    "require": "./dist/main.js"
   }
 }
