added type to package.json because of error in lexing-transformer

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "source": "src/index.js",
   "main": "dist/main.js",
   "module": "dist/module.js",
+  "type": "module",
   "scripts": {
     "build": "parcel build",
     "postversion": "git push && git push --tags",
