--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "devDependencies": {
     "c8": "^7.11.0",
+    "concat-stream": "^2.0.0",
     "parcel": "^2.0.1",
-    "tap": "^15.1.6"
+    "tap": "^15.1.6",
+    "temp": "^0.9.4"
   },
   "engines": {
     "node": ">=16"
