--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@foo-dog/utils",
   "version": "1.0.0-SNAPSHOT",
-  "description": "Adam's Utilities",
+  "description": "Foo-Dog Utilities",
   "source": "src/index.js",
   "main": "dist/index.js",
   "type": "module",
@@ -13,13 +13,13 @@
   "keywords": [
     "aakoch",
     "util",
-    "utils"
+    "utils",
+    "foo-dog"
   ],
   "author": "Adam A. Koch (aakoch)",
   "license": "ISC",
   "dependencies": {
-    "debug": "^4.3.2",
-    "minimist": "^1.2.5"
+    "debug": "^4.3.2"
   },
   "devDependencies": {
     "c8": "^7.11.0",
