--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "chalk": "^5.0.0",
     "concat-stream": "^2.0.0",
     "parcel": "^2.3.2",
-    "tap": "^15.1.6",
+    "tap": "16.2",
     "temp": "^0.9.4"
   },
   "engines": {
