--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "c8": "7.11.x",
     "chalk": "5.0.x",
     "concat-stream": "2.0.x",
-    "parcel": "2.3.x",
-    "tap": "^16.3.10",
+    "parcel": "^2.12.0",
+    "tap": "^21.0.0",
     "temp": "^0.9.4"
   },
   "engines": {
